# sonic-sudoku

./: .gitignore  Pipfile  pyproject.toml
docs/: conf.py  index.rst  modules.rst  sudoku.rst
sonic_sudoku/: solver.py
sudoku/: common.py  main.c  sudoku.py
sudoku.xcodeproj/: project.pbxproj
