[tool.poetry]
name = "sonic-sudoku"
version = "0.1.0"
description = ""
authors = ["David Ciani <dciani@davidciani.com>"]
readme = "README.md"
packages = [{include = "sonic_sudoku"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
sphinx = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
